Change first user default name to Me and resolve avatar clipping on hover

--- a/styles.css
+++ b/styles.css
@@ -441,7 +441,7 @@ body {
     display: flex;
     gap: 16px;
     overflow-x: auto;
-    padding: 8px !important;
+    padding: 16px 8px !important;
     align-items: center;
     scrollbar-width: none;
     margin: 16px;
